# PetProjectFastApi

./: .env  .pre-commit-config.yaml  README.md  docker-compose.override.yml  docker-compose.yml
backend/: Dockerfile  README.md  mypy.ini  pyproject.toml
backend/app/: backend_pre_start.py  initial_data.py  main.py  tests_pre_start.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 1693b5ab1ebb_models_init.py  c43e122918fe_initial_migration.py
backend/app/api/v1/: deps.py  main.py
backend/app/api/v1/routes/: login.py  private.py  users.py  utils.py  websocket.py
backend/app/core/: celery_app.py  config.py
backend/app/crud/: user.py
backend/app/db/: base.py  init_db.py  session.py
backend/app/models/: __init__.py  user.py
backend/app/repositories/: base.py  user.py
backend/app/schemas/: auth.py  common.py  user.py
backend/app/tasks/: email.py
backend/app/tests/: conftest.py
backend/app/tests/utils/: user.py  utils.py
backend/app/utils/: email.py  security.py  storage.py
backend/app/websockets/: handlers.py
clients/: ws_client.py
frondend/: README.md
websocket/: Dockerfile  websocket_server.py
websocket-server/: Dockerfile  README.md  pyproject.toml  websocket_server.py
